login page design

--- a/views/entries.html
+++ b/views/entries.html
@@ -12,20 +12,14 @@
 
 	<header role="banner">
 		<h1>Dream Journal</h1>
+		<nav role="navigation">
+			<ul class="navgroup" id="hidden">
+			</ul>
+		</nav>
 	</header>
 	
 	<main role="main">    
         <div class="login-container">
-        <form action="#" class="js-login-form" role="login">
-                <fieldset>
-                    <legend>Enter username and password below:</legend>
-                  <label for="username">Username: 
-                    <input type="text" id="username" name="username" class="login-field" required></label>
-                  <label for="pass">Password: 
-                    <input type="text" id="pass" name="city" class="login-field" required></label>
-                    <button class="button" id="login">Login</button>
-        <p>First time user? <a href="#">Register.</a>
-        Forgot login information? <a href="#">Click here.</a></p>
     </div>
 	</main>
 
