--- a/views/index.html
+++ b/views/index.html
@@ -16,13 +16,13 @@
 	
 	<main role="main">    
         <div class="login-container">
-        <form action="#" class="js-login-form" role="login">
+        <form action="/entries.html" class="js-login-form" role="login">
                 <fieldset>
                     <legend>Enter username and password below:</legend>
                   <label for="username">Username: 
                     <input type="text" id="username" name="username" class="login-field" required></label>
                   <label for="pass">Password: 
-                    <input type="text" id="pass" name="city" class="login-field" required></label>
+                    <input type="text" id="pass" name="pass" class="login-field" required></label>
                     <button class="button" id="login">Login</button>
         <p>First time user? <a href="#">Register.</a>
         Forgot login information? <a href="#">Click here.</a></p>
