after mentor session

--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
 	
 	<main role="main">    
         <div class="login-container">
-        <form action="/entries.html" class="js-login-form" role="login">
+        <form class="js-login-form" role="login" id="">
                 <fieldset>
                     <legend>Enter username and password below:</legend>
                   <label for="username">Username: 
@@ -34,7 +34,6 @@
 			</div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="../server.js"></script>
     <script src="index.js"></script>
 
     </body>
