--- a/views/styles.css
+++ b/views/styles.css
@@ -1,3 +1,8 @@
+html {
+  overflow: -moz-scrollbars-vertical; 
+  overflow-y: scroll;
+}
+
 header {
   margin: 0px;
   padding: 0px;
@@ -14,6 +19,7 @@ body {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 h1 {
@@ -23,6 +29,7 @@ h1 {
   color: white;
   text-align: center;
   margin-top: 118px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 h2 {
@@ -32,6 +39,26 @@ h2 {
   color: white;
   text-align: center;
   top: 0px;
+}
+
+h3 {
+  display: inline;
+  font-family: "Amatic SC", cursive;
+  font-size: 56px;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+h4 {
+  display: block;
+  font-family: "Amatic SC", cursive;
+  font-size: 40px;
+  color: white;
+  text-align: center;
+  padding: 0px;
+  margin: 0px;
 }
 
 .nav-container {
@@ -46,14 +73,12 @@ h2 {
   width: 100%;
   height: 75px;
   display: block;
+  text-align: center;
+  z-index: 3;
 }
 
 .nav-container ul {
-  color: #f2f2f2;
-  padding: 0px 16px;
   list-style-type: none;
-  text-align: center;
-  top: 0px;
 }
 
 .nav-container li {
@@ -61,11 +86,13 @@ h2 {
   font-family: "Amatic SC", cursive;
   font-size: 50px;
   color: white;
-  padding: 25px 16px;
+  padding: 5px 16px 0px 0px;
+  margin-top: -48px;
 }
 
 .nav-container ul li:first-child {
   float: left;
+  margin-left: -20px;
 }
 
 main {
@@ -84,6 +111,7 @@ main {
   margin-left: auto;
   margin-right: auto;
   padding: 5px 5px 5px 5px;
+  box-shadow: 2px 2px 6px #000000;
 }
 
 .post-container {
@@ -94,10 +122,28 @@ main {
   color: white;
   font-family: "Mukta", sans-serif;
   width: 36%;
-  top: 125px;
+  top: 105px;
   margin-left: auto;
   margin-right: auto;
   padding: 5px 5px 20px 5px;
+  box-shadow: 2px 2px 6px #000000;
+}
+
+.entry-container {
+  z-index: 2;
+  display: block;
+  position: relative;
+  border: 1px solid rgba(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.85);
+  color: white;
+  font-family: "Mukta", sans-serif;
+  width: 36%;
+  top: 105px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  padding: 20px 5px 20px 5px;
+  box-shadow: 2px 2px 6px #000000;
 }
 
 .login-container input {
@@ -110,6 +156,7 @@ main {
   width: 200px;
   height: 40px;
   padding: 0px 0px 0px 0px;
+  font-size: 16px;
 }
 
 .post-container input {
@@ -122,8 +169,18 @@ main {
   width: 400px;
   height: 40px;
   padding: 0px 0px 0px 0px;
+  font-size: 16px;
 }
 
+.action-title {
+  display: block;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 36%;
+  top: 105px;
+
+}
 fieldset {
   border: 0px;
   padding: 0px 0px 0px 0px;
@@ -192,12 +249,34 @@ a:active {
   width: 400px;
   padding: 0px 0px 0px 0px;
   height: 100px;
+  font-size: 16px;
 }
 
-.hidden {
+.hidden, #hidden {
   display: none;
 }
 
 ::placeholder {
-  color: rgba(255, 255, 255, 0.85);
+  color: rgba(255, 255, 255, 0.65);
+  font-size: 16px;
+}
+
+.btnupdate, .btndelete {
+  background-color: rgba(183, 171, 214, 0.66);
+  color: black;
+  height: 30px;
+  margin-left: 30px;
+  border: 1px solid black;
+  margin-top: 22px;
+  font-size: 16px;
+  font-family: "Mukta", sans-serif;
+  width: 200px;
+  -webkit-transition-duration: 0.2s; /* Safari */
+  transition-duration: 0.2s;
+}
+
+.btnupdate:hover, .btndelete:hover {
+  background-color: rgba(0, 0, 0, 0);
+  border: 1px solid rgba(183, 171, 214);
+  color: rgba(183, 171, 214);
 }
