ready for mentor session

--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
           </li>
           <li><a class="sign-out">Sign Out</a></li>
           <li><a class="new-post">New Post</a></li>
-          <li><a class="view-all">View All</a></li>
+          <li><a class="display-all">View All</a></li>
         </ul>
       </nav>
     </div>
@@ -31,7 +31,7 @@
   <main role="main">
     <section role="section" class="" id="login-page">
       <div class="login-container">
-        <form class="js-login-form" role="login">
+        <form class="js-login-form" role="post">
           <fieldset>
             <legend>Enter login information below:</legend>
             <label for="username">Username:
