--- a/views/styles.css
+++ b/views/styles.css
@@ -60,6 +60,9 @@ h4 {
   padding: 0px;
   margin: 0px;
 }
+.menu-item {
+  cursor: pointer;
+}
 
 .nav-container {
   overflow: hidden;
@@ -142,8 +145,9 @@ main {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
-  padding: 20px 5px 20px 5px;
+  padding: 20px 20px 20px 20px;
   box-shadow: 2px 2px 6px #000000;
+  text-align: left;
 }
 
 .update-container {
@@ -159,8 +163,9 @@ main {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
-  padding: 20px 5px 20px 5px;
+  padding: 20px 20px 20px 20px;
   box-shadow: 2px 2px 6px #000000;
+  text-align: left;
 }
 
 .login-container input {
@@ -227,6 +232,7 @@ p {
 
 label {
   display: block;
+  text-align: center;
 }
 
 input:focus,
@@ -260,6 +266,7 @@ a:active {
   height: 44px;
   -webkit-transition-duration: 0.2s; /* Safari */
   transition-duration: 0.2s;
+  cursor: pointer;
 }
 
 .button:hover,
@@ -303,10 +310,26 @@ a:active {
   width: 200px;
   -webkit-transition-duration: 0.2s; /* Safari */
   transition-duration: 0.2s;
+  cursor: pointer;
 }
 
-.btnupdate:hover, .btndelete:hover {
+.btnupdate:hover, .btndelete:hover, .btnsave:hover {
   background-color: rgba(0, 0, 0, 0);
   border: 1px solid rgba(183, 171, 214);
   color: rgba(183, 171, 214);
+}
+
+.purple {
+  color:  rgba(183, 171, 214);
+  font-weight: bold;
+}
+
+.button-align {
+  text-align: center;
+}
+
+.response {
+  text-align: center;
+  font-size: 56px;
+  font-family: "Amatic SC", cursive;
 }
