--- a/views/index.html
+++ b/views/index.html
@@ -90,6 +90,7 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="index.js"></script>
   <script src="api.js"></script>
+  <script src="error.js"></script>
 
 </body>
 
