--- a/views/index.html
+++ b/views/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DreamJournal</title>
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Mukta" rel="stylesheet">
   <link href="styles.css" rel="stylesheet" type="text/css" />
   <link href="jquery-ui.css" rel="stylesheet" type="text/css" />
-
 
 </head>
 
@@ -51,11 +51,11 @@
     </section>
 
     <section role="section">
-      <div class="action-title">
+      <div class="action-title hidden">
         <h3></h3>
       </div>
       <div class="hidden" id="entry-page">
-        <div class="post-container">
+        <div class="post-container" aria-live="assertive">
           <form class="js-post-form" role="post">
             <fieldset>
               <label for="username">Title:
@@ -72,20 +72,12 @@
           </form>
         </div>
       </div>
-      <div class="hidden" id="view-all-page">
+
+      <div class="hidden" id="view-all-page" aria-live="assertive">
       </div>
-
-
     </section>
-
-
-
   </main>
 
-  <footer>
-    <div class="footer-info">
-    </div>
-  </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="index.js"></script>
