--- a/views/styles.css
+++ b/views/styles.css
@@ -1,8 +1,3 @@
-html {
-  overflow: -moz-scrollbars-vertical; 
-  overflow-y: scroll;
-}
-
 header {
   margin: 0px;
   padding: 0px;
@@ -188,7 +183,7 @@ main {
   color: white;
   background-color: rgba(183, 171, 214, 0.5);
   border: 0px solid rgba(255, 255, 255, 0.85);
-  width: 400px;
+  width: 80%;
   height: 40px;
   padding: 0px 0px 0px 0px;
   font-size: 16px;
@@ -201,7 +196,7 @@ main {
   color: white;
   background-color: rgba(183, 171, 214, 0.5);
   border: 0px solid rgba(255, 255, 255, 0.85);
-  width: 400px;
+  width: 80%;
   height: 40px;
   padding: 0px 0px 0px 0px;
   font-size: 16px;
@@ -283,7 +278,7 @@ a:active {
   color: white;
   background-color: rgba(183, 171, 214, 0.5);
   border: 0px solid rgba(255, 255, 255, 0.85);
-  width: 400px;
+  width: 80%;
   padding: 0px 0px 0px 0px;
   height: 100px;
   font-size: 16px;
@@ -332,4 +327,73 @@ a:active {
   text-align: center;
   font-size: 56px;
   font-family: "Amatic SC", cursive;
+}
+
+@media only screen 
+and (min-device-width: 320px) 
+and (max-device-width: 767px) 
+{
+  body {
+    background-size: 85%;
+    background-position: 50% 85px;
+  }
+  
+  h1 {
+    font-size: 54px;
+    padding-bottom: 26px;
+    margin-top: 94px;
+  }
+
+  h3 {
+    font-size: 36px;
+  }
+
+  h4 {
+    font-size: 28px;
+  }
+ .update-container, .entry-container, .post-container {
+   width: 75%;
+   margin-bottom: 36px;
+   border: 1px solid rgba(183, 171, 214, 0.66);
+   top: 86px;
+  }
+
+  .login-container {
+    width: 75%;
+    border: 1px solid rgba(183, 171, 214, 0.66);
+  }
+
+  .action-title {
+    width: 75%;
+    padding-bottom: 6px;
+    top: 88px;
+  }
+
+  .post-field {
+    width: 75%;
+  }
+ 
+  .nav-container {
+    height: 90px;
+    top: -15px;
+  }
+ 
+  .nav-container li {
+   padding-right: 0px;
+   padding-left: 0px;
+   padding-bottom: 10px;
+   padding-top: 5px;
+   float: right;
+   margin-top: -60px;
+}
+  .menu-item {
+    font-family: "Mukta", sans-serif;
+    font-size: 18px;
+    padding-right: 10px;
+  }
+  h2 {
+    font-size: 35px;
+    display: block;
+    padding-right: 15px;
+  }
 }
