--- a/views/index.html
+++ b/views/index.html
@@ -19,9 +19,7 @@
     <div class="nav-container">
       <nav role="navigation" class="hidden" id="navbar">
         <ul class="navgroup">
-          <li>
             <h2>Dream Journal</h2>
-          </li>
           <li><a class="sign-out menu-item">Sign Out</a></li>
           <li><a class="new-post menu-item">New Post</a></li>
           <li><a class="display-all menu-item">View All</a></li>
@@ -35,7 +33,7 @@
       <div class="login-container">
         <form class="js-login-form" role="post">
           <fieldset>
-            <legend>Enter login information below:</legend>
+            <legend><p class="orange">A simple blogging app to record dreams.</p>Enter login information below:</legend>
             <label for="username">Username:
               <input type="text" id="username" name="username" class="login-field" required></label>
             <label for="pass">Password:
