--- a/views/styles.css
+++ b/views/styles.css
@@ -2,6 +2,10 @@ header {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  top: 0px;
+  right: 0px;
+  width: 100%;
+  height: 75px;
 }
 
 body {
@@ -23,17 +27,17 @@ h1 {
   font-size: 100px;
   color: white;
   text-align: center;
-  margin-top: 118px;
+  margin-top: 80px;
   text-shadow: 2px 2px 4px #000000;
 }
 
 h2 {
-  display: inline;
   font-family: "Amatic SC", cursive;
   font-size: 50px;
   color: white;
   text-align: center;
-  top: 0px;
+  float: left;
+  margin-top: 0px;
 }
 
 h3 {
@@ -63,16 +67,15 @@ a, .menu-item {
   overflow: hidden;
   background-color: black;
   font-family: "Amatic SC", cursive;
-  font-size: 50px;
   color: white;
   position: fixed;
-  top: 0px;
-  right: 0px;
-  width: 100%;
-  height: 75px;
   display: block;
   text-align: center;
   z-index: 3;
+  width: 100%;
+  height: 75px;
+  top: -12px;
+  right: 15px;
 }
 
 .nav-container ul {
@@ -82,15 +85,9 @@ a, .menu-item {
 .nav-container li {
   float: right;
   font-family: "Amatic SC", cursive;
-  font-size: 50px;
   color: white;
-  padding: 5px 16px 0px 0px;
-  margin-top: -48px;
-}
+  padding: 0px 16px 0px 0px;
 
-.nav-container ul li:first-child {
-  float: left;
-  margin-left: -20px;
 }
 
 main {
@@ -98,21 +95,14 @@ main {
 }
 
 .login-container {
-  display: inline-block;
-  position: relative;
-  border: 1px solid rgba(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.85);
-  color: white;
-  font-family: "Mukta", sans-serif;
-  width: 36%;
-  top: -65px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 5px 5px 5px 5px;
-  box-shadow: 2px 2px 6px #000000;
+  top: 60px;
 }
 
 .post-container {
+  top: 25px;
+}
+
+.login-container, .post-container {
   display: inline-block;
   position: relative;
   border: 1px solid rgba(0, 0, 0);
@@ -120,14 +110,13 @@ main {
   color: white;
   font-family: "Mukta", sans-serif;
   width: 36%;
-  top: 105px;
   margin-left: auto;
   margin-right: auto;
   padding: 5px 5px 20px 5px;
   box-shadow: 2px 2px 6px #000000;
 }
 
-.entry-container {
+.entry-container, .update-container {
   z-index: 2;
   display: block;
   position: relative;
@@ -136,25 +125,7 @@ main {
   color: white;
   font-family: "Mukta", sans-serif;
   width: 36%;
-  top: 105px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
-  padding: 20px 20px 20px 20px;
-  box-shadow: 2px 2px 6px #000000;
-  text-align: left;
-}
-
-.update-container {
-  z-index: 2;
-  display: block;
-  position: relative;
-  border: 1px solid rgba(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.85);
-  color: white;
-  font-family: "Mukta", sans-serif;
-  width: 36%;
-  top: 105px;
+  top: 25px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
@@ -164,40 +135,22 @@ main {
 }
 
 .login-container input {
-  display: block;
-  margin: auto;
-  font-family: "Mukta", sans-serif;
-  color: white;
-  background-color: rgba(183, 171, 214, 0.5);
-  border: 0px solid rgba(255, 255, 255, 0.85);
   width: 200px;
   height: 40px;
-  padding: 0px 0px 0px 0px;
-  font-size: 16px;
 }
 
-.post-container input {
+.post-container input, .js-update-form input {
+  width: 80%;
+  height: 40px;
+}
+
+.login-container input, .post-container input, .js-update-form input {
   display: block;
   margin: auto;
   font-family: "Mukta", sans-serif;
   color: white;
   background-color: rgba(183, 171, 214, 0.5);
   border: 0px solid rgba(255, 255, 255, 0.85);
-  width: 80%;
-  height: 40px;
-  padding: 0px 0px 0px 0px;
-  font-size: 16px;
-}
-
-.js-update-form input {
-  display: block;
-  margin: auto;
-  font-family: "Mukta", sans-serif;
-  color: white;
-  background-color: rgba(183, 171, 214, 0.5);
-  border: 0px solid rgba(255, 255, 255, 0.85);
-  width: 80%;
-  height: 40px;
   padding: 0px 0px 0px 0px;
   font-size: 16px;
 }
@@ -208,9 +161,14 @@ main {
   margin-left: auto;
   margin-right: auto;
   width: 36%;
-  top: 105px;
+  top: 20px;
 
 }
+
+.menu-item {
+  font-size: 50px;
+}
+
 fieldset {
   border: 0px;
   padding: 0px 0px 0px 0px;
@@ -297,7 +255,6 @@ a:active {
   background-color: rgba(183, 171, 214, 0.66);
   color: black;
   height: 30px;
-  margin-left: 30px;
   border: 1px solid black;
   margin-top: 22px;
   font-size: 16px;
@@ -319,6 +276,11 @@ a:active {
   font-weight: bold;
 }
 
+.orange {
+  color:  rgba(213, 166, 132);
+  font-weight: bold;
+}
+
 .button-align {
   text-align: center;
 }
@@ -330,8 +292,8 @@ a:active {
 }
 
 @media only screen 
-and (min-device-width: 320px) 
-and (max-device-width: 767px) 
+and (min-device-width: 450px) 
+and (max-device-width: 797px) 
 {
   body {
     background-size: 85%;
@@ -351,10 +313,26 @@ and (max-device-width: 767px)
   h4 {
     font-size: 28px;
   }
+
+  h2 {
+    font-size: 35px;
+    margin-top: 5px;
+    margin-left: -5px;
+  }
+  
+  .login-container {
+  top: 0px;
+  }
+
+  .nav-container li {
+    margin-top: -15px;
+    margin-right: -12px;
+    padding: 35px 16px 0px 0px;
+  }
+
  .update-container, .entry-container, .post-container {
    width: 75%;
    border: 1px solid rgba(183, 171, 214, 0.66);
-   top: 86px;
   }
 
   .entry-container {
@@ -369,35 +347,85 @@ and (max-device-width: 767px)
   .action-title {
     width: 75%;
     padding-bottom: 6px;
-    top: 88px;
   }
 
   .post-field {
     width: 75%;
   }
- 
-  .nav-container {
-    height: 90px;
-    top: -15px;
-  }
- 
-  .nav-container ul {
-   float: right;
-   margin-top: 38px;
-}
 
-.nav-container li {
-  height: 100%;
-} 
   .menu-item {
     font-family: "Mukta", sans-serif;
     font-size: 18px;
     padding-right: 10px;
 
   }
-  h2 {
-    font-size: 35px;
-    display: block;
-    padding-right: 15px;
-  }
+}
+@media only screen 
+and (min-device-width: 320px) 
+and (max-device-width: 449px) {
+    body {
+      background-size: 85%;
+      background-position: 50% 85px;
+    }
+    
+    h1 {
+      font-size: 54px;
+      padding-bottom: 26px;
+      margin-top: 94px;
+    }
+  
+    h3 {
+      font-size: 36px;
+    }
+  
+    h4 {
+      font-size: 28px;
+    }
+
+    h2 {
+      font-size: 35px;
+      top: 5px;
+      display: block;
+      padding-left: 15px;
+    }
+
+    .login-container {
+    top: 0px;
+    }
+  
+    .nav-container {
+      padding-top: 10px;
+    }
+
+    .nav-container li {
+      margin-top: -10px;
+    }
+  
+   .update-container, .entry-container, .post-container {
+     width: 75%;
+     border: 1px solid rgba(183, 171, 214, 0.66);
+    }
+  
+    .entry-container {
+      margin-bottom: 36px;
+    }
+  
+    .login-container {
+      width: 75%;
+      border: 1px solid rgba(183, 171, 214, 0.66);
+    }
+  
+    .action-title {
+      width: 75%;
+      padding-bottom: 6px;
+    }
+  
+    .post-field {
+      width: 75%;
+    }
+  
+    .menu-item {
+      font-family: "Mukta", sans-serif;
+      font-size: 18px;  
+    }
 }
