--- a/views/styles.css
+++ b/views/styles.css
@@ -152,7 +152,7 @@ main {
   background-color: rgba(183, 171, 214, 0.5);
   border: 0px solid rgba(255, 255, 255, 0.85);
   padding: 0px 0px 0px 0px;
-  font-size: 16px;
+  font-size: 17px;
 }
 
 .action-title {
@@ -210,7 +210,7 @@ a:active {
 
 .button {
   margin-top: 22px;
-  font-size: 16px;
+  font-size: 17px;
   font-family: "Mukta", sans-serif;
   color: black;
   background-color: white;
@@ -239,7 +239,7 @@ a:active {
   width: 80%;
   padding: 0px 0px 0px 0px;
   height: 100px;
-  font-size: 16px;
+  font-size: 17px;
 }
 
 .hidden, #hidden {
@@ -248,7 +248,7 @@ a:active {
 
 ::placeholder {
   color: rgba(255, 255, 255, 0.65);
-  font-size: 16px;
+  font-size: 17px;
 }
 
 .btnupdate, .btndelete, .btnsave {
@@ -257,7 +257,7 @@ a:active {
   height: 30px;
   border: 1px solid black;
   margin-top: 22px;
-  font-size: 16px;
+  font-size: 17px;
   font-family: "Mukta", sans-serif;
   width: 200px;
   -webkit-transition-duration: 0.2s; /* Safari */
@@ -279,6 +279,7 @@ a:active {
 .orange {
   color:  rgba(213, 166, 132);
   font-weight: bold;
+  letter-spacing: 0.1em;
 }
 
 .button-align {
