fixed media queries

--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,7 @@
               <input type="text" id="username" name="username" class="login-field" required></label>
             <label for="pass">Password:
               <input type="password" id="pass" name="pass" class="login-field" required></label>
-            <label for="email" class="hidden" id="email">Email:
+            <label for="email" class="hidden" id="email">Email (optional):
               <input type="text" id="email-field" name="email" class="login-field"></label>
             </label>
           </fieldset>
